Feat: Post An Order With Products Success

--- a/Katas API/OrdersWebApi/OrdersWebApi/OrdersWebApi.Tests/OrdersWebApi.Tests.csproj
+++ b/Katas API/OrdersWebApi/OrdersWebApi/OrdersWebApi.Tests/OrdersWebApi.Tests.csproj
@@ -27,4 +27,8 @@
       <ProjectReference Include="..\OrdersWebApi\OrdersWebApi.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Queries" />
+    </ItemGroup>
+
 </Project>
