--- a/Katas API/OrdersWebApi/OrdersWebApi/OrdersWebApi/OrdersWebApi.csproj
+++ b/Katas API/OrdersWebApi/OrdersWebApi/OrdersWebApi/OrdersWebApi.csproj
@@ -10,6 +10,7 @@
         <PackageReference Include="MediatR" Version="12.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+        <PackageReference Include="System.Data.SQLite" Version="1.0.117" />
     </ItemGroup>
 
 </Project>
