--- a/Katas API/OrdersWebApi/OrdersWebApi/OrdersWebApi/OrdersWebApi.csproj
+++ b/Katas API/OrdersWebApi/OrdersWebApi/OrdersWebApi/OrdersWebApi.csproj
@@ -14,4 +14,10 @@
         <PackageReference Include="System.Data.SQLite" Version="1.0.117" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="Orders.db">
+        <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
