--- a/Katas API/OrdersWebApi/OrdersWebApi/OrdersWebApi.Tests/OrdersWebApi.Tests.csproj
+++ b/Katas API/OrdersWebApi/OrdersWebApi/OrdersWebApi.Tests/OrdersWebApi.Tests.csproj
@@ -29,12 +29,15 @@
     </ItemGroup>
 
     <ItemGroup>
-        <None Update="Acceptance\AddProductsFeature.AddProductsToAnOrder.verified.txt">
-            <DependentUpon>AddProductsToOrderFeature.cs</DependentUpon>
-        </None>
         <None Update="Acceptance\DisplayFeature.DisplayBasicInformationOfAnOrder.received.txt">
             <ParentFile>DisplayFeature</ParentFile>
             <DependentUpon>DisplayFeature.cs</DependentUpon>
+        </None>
+        <None Update="Acceptance\DisplayProductFeature.DisplayACreatedProduct.received.txt">
+          <DependentUpon>DisplayProductFeature.cs</DependentUpon>
+        </None>
+        <None Update="Acceptance\CreateUsersFeature.DisplayProperInformationOfACreatedUser.verified.txt">
+          <DependentUpon>CreateUsersFeature.cs</DependentUpon>
         </None>
     </ItemGroup>
 
