Refactor: Entity default values extracted from tests

--- a/Katas API/OrdersWebApi/OrdersWebApi/OrdersWebApi.Tests.Api/OrdersWebApi.Tests.Api.csproj
+++ b/Katas API/OrdersWebApi/OrdersWebApi/OrdersWebApi.Tests.Api/OrdersWebApi.Tests.Api.csproj
@@ -22,4 +22,10 @@
       <ProjectReference Include="..\OrdersWebApi.TestUtils\OrdersWebApi.TestUtils.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="Acceptance\CreateUsersFeature.DisplayProperInformationOfACreatedUser.received.txt">
+        <DependentUpon>CreateUsersFeature.cs</DependentUpon>
+      </None>
+    </ItemGroup>
+
 </Project>
